--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,98 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes floatToLeft {
+  0% {
+    transform: translateX(100vw) translateY(var(--random-y));
+    opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
+
+  100% {
+    transform: translateX(calc(-100%)) translateY(var(--random-y));
+    opacity: 0;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0.8;
   }
 }
 
-.card {
-  padding: 2em;
+@font-face {
+  font-family: 'Helvetica-Neue';
+  src: url('../fonts/Helvetica-Neue-65-Medium.ttf');
 }
 
-.read-the-docs {
-  color: #888;
+
+.container{
+  opacity: 0; /* Set initial opacity to 0 */
+  animation: fadeIn 2s ease-in forwards; /* Apply fade-in animation */
+}
+
+.float-text {
+  font-family: 'Helvetica-Neue';
+  opacity:0; 
+  position: absolute;
+  text-align: center; /* Add this line to center-align the text */
+  animation: floatToLeft linear infinite;
+  backface-visibility: hidden;
+  cursor: default;
+  
+}
+
+.hovered-text {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 8px;
+  pointer-events: none; /* Add this line to allow interaction with underlying elements */
+  width:100vw;
+  cursor: default;
+  text-align: center; /* Center-align multiline text */
+}
+
+.hovered-text-content {
+  font-family: 'Helvetica-Neue';
+  font-size: 30px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin: 0;
+  cursor: default;
+  padding: 0;
+  pointer-events: none; /* Add this line to allow interaction with underlying elements */
+}
+
+.title {
+  position: fixed;
+  left: 50%;
+  top: 4%;
+  color: white;
+  font-size: 18px;
+  font-family: 'Helvetica-Neue';
+  transform: translate(-50%, -4%);
+  cursor: default;
+
+  background-color: #52FF00; /* Add your initial background color */
+  padding: 3px; /* Add padding to create space around the text */
+}
+
+@keyframes colorFade {
+  0% { background-color: #52FF00; } /* Add your initial color */
+  25% { background-color: #FF0000; } /* Add your second color */
+  50% { background-color: #0000FF; } /* Add your third color */
+  100% { background-color: #52FF00; } /* Repeat the initial color to create a smooth loop */
+}
+
+.title:hover {
+  animation-name: colorFade;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
 }
