--- a/src/App.css
+++ b/src/App.css
@@ -16,30 +16,52 @@
   }
 
   100% {
-    opacity: 0.8;
+    opacity: 1;
   }
 }
 
-@font-face {
-  font-family: 'Helvetica-Neue';
-  src: url('../fonts/Helvetica-Neue-65-Medium.ttf');
+@keyframes colorCycle {
+  0% { color: #2A8EA0; }
+  25% { color: #8D8122; }
+  50% { color: #E12C31; }
+  75% { color: #357124; }
+  100% { color: #D72DC2; }
 }
 
-
-.container{
-  opacity: 0; /* Set initial opacity to 0 */
-  animation: fadeIn 2s ease-in forwards; /* Apply fade-in animation */
+.container {
+  opacity: 0;
+  animation: fadeIn 2s ease-in forwards;
 }
 
 .float-text {
   font-family: 'Helvetica-Neue';
-  opacity:0; 
+  opacity: 0;
   position: absolute;
-  text-align: center; /* Add this line to center-align the text */
+  text-align: center;
   animation: floatToLeft linear infinite;
   backface-visibility: hidden;
   cursor: default;
-  
+}
+
+.float-text-wrapper .float-text {
+  animation: floatToLeft linear infinite;
+}
+
+.float-text-wrapper:hover .float-text {
+  animation: floatToLeft linear infinite, colorCycle 3s infinite;
+}
+
+.float-text-wrapper:hover .float-text-wrapper-inner {
+  animation: colorCycle 3s infinite;
+}
+
+
+.float-text-wrapper .hovered-text {
+  display: none;
+}
+
+.float-text-wrapper:hover .hovered-text {
+  display: block;
 }
 
 .hovered-text {
@@ -49,15 +71,15 @@
   transform: translate(-50%, -50%);
   padding: 20px;
   border-radius: 8px;
-  pointer-events: none; /* Add this line to allow interaction with underlying elements */
-  width:100vw;
+  pointer-events: none;
+  width: 100vw;
   cursor: default;
-  text-align: center; /* Center-align multiline text */
+  text-align: center;
 }
 
 .hovered-text-content {
   font-family: 'Helvetica-Neue';
-  font-size: 30px;
+  font-size: 40px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -67,28 +89,31 @@
   margin: 0;
   cursor: default;
   padding: 0;
-  pointer-events: none; /* Add this line to allow interaction with underlying elements */
+  pointer-events: none;
 }
 
 .title {
   position: fixed;
   left: 50%;
   top: 4%;
-  color: white;
-  font-size: 18px;
+  color: black;
+  font-size: 30px;
   font-family: 'Helvetica-Neue';
   transform: translate(-50%, -4%);
   cursor: default;
+  padding: 3px;
+}
 
-  background-color: #52FF00; /* Add your initial background color */
-  padding: 3px; /* Add padding to create space around the text */
+.title-text{
+  font-size:20px;
 }
 
 @keyframes colorFade {
-  0% { background-color: #52FF00; } /* Add your initial color */
-  25% { background-color: #FF0000; } /* Add your second color */
-  50% { background-color: #0000FF; } /* Add your third color */
-  100% { background-color: #52FF00; } /* Repeat the initial color to create a smooth loop */
+  0% { color: #2A8EA0; }
+  25% { color: #8D8122; }
+  50% { color: #E12C31; }
+  75% { color: #357124; }
+  100% { color: #D72DC2; }
 }
 
 .title:hover {
