--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-@keyframes floatToLeft {
+@-webkit-keyframes floatToLeft {
   0% {
-    transform: translateX(100vw) translateY(var(--random-y));
+    transform: translateX(calc(100% + 100vw)) translateY(var(--random-y));
     opacity: 1;
   }
 
@@ -10,7 +10,7 @@
   }
 }
 
-@keyframes fadeIn {
+@-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
   }
@@ -20,7 +20,7 @@
   }
 }
 
-@keyframes colorCycle {
+@-webkit-keyframes colorCycle {
   0% { color: #2A8EA0; }
   25% { color: #8D8122; }
   50% { color: #E12C31; }
@@ -31,7 +31,7 @@
 .container {
   opacity: 0;
   height: 100vh;
-  animation: fadeIn 2s ease-in forwards;
+  -webkit-animation: fadeIn 2s ease-in forwards;
 }
 
 .float-text {
@@ -39,23 +39,26 @@
   opacity: 0;
   position: absolute;
   text-align: center;
-  animation: floatToLeft linear infinite;
+  -webkit-animation: floatToLeft linear infinite;
   backface-visibility: hidden;
   cursor: pointer;
 }
 
-.float-text-wrapper .float-text {
-  animation: floatToLeft linear infinite;
+.float-text-wrapper:hover .float-text {
+  -webkit-animation-name: floatToLeft, colorCycle;
+  -webkit-animation-duration: 30s, 3s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
 }
 
 .float-text-wrapper:hover .float-text {
   
-  animation: floatToLeft linear infinite, colorCycle 3s infinite;
+  -webkit-animation: floatToLeft linear infinite, colorCycle 3s infinite;
 }
 
 .float-text-wrapper:hover .float-text-wrapper-inner {
   opacity: 1;
-  animation: colorCycle 3s infinite;
+  -webkit-animation: colorCycle 3s infinite;
 }
 
 
@@ -71,7 +74,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
   padding: 20px;
   border-radius: 8px;
   pointer-events: none;
