--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-@keyframes floatToLeft {
+@-webkit-keyframes floatToLeft {
   0% {
-    transform: translateX(100vw) translateY(var(--random-y));
+    -webkit-transform: translateX(100vw) translateY(var(--random-y));
     opacity: 1;
   }
 
   100% {
-    transform: translateX(calc(-100%)) translateY(var(--random-y));
+    -webkit-transform: translateX(calc(-100%)) translateY(var(--random-y));
     opacity: 0;
   }
 }
@@ -39,23 +39,23 @@
   opacity: 0;
   position: absolute;
   text-align: center;
-  animation: floatToLeft linear infinite;
+  animation: floatToLeft linear 0.01s infinite;
   backface-visibility: hidden;
   cursor: pointer;
 }
 
 .float-text-wrapper .float-text {
-  animation: floatToLeft linear infinite;
+  animation: floatToLeft linear 0.01s infinite;
 }
 
 .float-text-wrapper:hover .float-text {
   
-  animation: floatToLeft linear infinite, colorCycle 3s infinite;
+  animation: floatToLeft linear 0.01s infinite, colorCycle 3s infinite;
 }
 
 .float-text-wrapper:hover .float-text-wrapper-inner {
   opacity: 1;
-  animation: colorCycle 3s infinite;
+  animation: colorCycle 3s linear 0.01s infinite;
 }
 
 
